# hellocmake

./: README.md
lesson1/: CMakeLists.txt
lesson1.1/: CMakeLists.txt
lesson1.1/app/: CMakeLists.txt  main.cpp
lesson1.1/include/demolib/: demo.hpp
lesson1.1/src/: CMakeLists.txt  demo.cpp
lesson1/include/: utils.h
lesson1/src/: main.cpp  utils.cpp
lesson4/: CMakeLists.txt
lesson4/lib/math/: CMakeLists.txt
lesson4/lib/math/src/: matrix.cpp
lesson4/src/: CMakeLists.txt  main.cpp
